# 24205-DOBROVLYANINA-OOP-CPP

./: .gitignore
task0/: CMakeLists.txt
task0/src/: CSVFileWriter.cpp  CSVFileWriter.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  TextParser.cpp  TextParser.h  WordFrequencyAnalyzer.cpp  WordFrequencyAnalyzer.h  WordStat.cpp  WordStat.h  main.cpp
task0/tst/: TestTextParser.cpp  TestWordFrequencyAnalyzer.cpp
task1/: CMakeLists.txt
task1/src/: BitArray.cpp  BitArray.h  main.cpp
task1/tst/: TestBitArray.cpp
task2/: CMakeLists.txt
task2/src/: Command.cpp  Command.h  ConsoleInterface.cpp  ConsoleInterface.h  GameConfig.cpp  GameConfig.h  GameEngine.cpp  GameEngine.h  GameOfLife.cpp  GameOfLife.h  Grid.cpp  Grid.h  LifeFileReader.cpp  LifeFileReader.h  LifeFileWriter.cpp  LifeFileWriter.h  LifeGame.cpp  LifeGame.h  LifeParser.cpp  LifeParser.h  main.cpp
task2/tst/: TestConsoleInterface.cpp  TestGameEngine.cpp  TestGrid.cpp  TestLifeParser.cpp
